fixing quote spacing

--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,7 @@ body {
     background-color: var(--tan);
     box-shadow: 0px 2px 8px 1px black;
     align-items: center;
+    justify-content: space-evenly;
     width: 25rem;
     padding: 1rem;
     gap: 1rem;
@@ -944,7 +945,7 @@ h3 {
         overflow-y: auto;
         padding: 0;
     }
-    
+
     .category {
         width: 20rem;
         height: 4.5rem;
